[package]
name = "dhcp-rs"
version = "0.1.0"
authors = ["Peter De Schrijver <p2@psychaos.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.23.0"
nom = "5.0.1"
byte_string = "1.0.0"
strum = "0.16.0"
strum_macros = "0.16.0"